--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,148 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;500&display=swap');
+
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+img {
+
+  max-width: 100%;
+  height: 150px;
+  width: 300px;
+  object-fit: cover;
+
+ 
+}
+
+body {
+
+  background-color: #111829; 
+  font-family: 'Heebo' ;
+  padding: 20px;
+  color: rgb(255, 255, 255);
+}
+
+.header {
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #223253d8;
+
+}
+
+/* filter */
+.filterHeader {
+
+
+  color: #fff;
+  padding: 40px;
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+ 
+
+}
+
+.select {
+
+  margin-top: 40px;
+  background-color: #223253d8;
+  outline: none;
+  border: none;
+  letter-spacing: 1px;
+  color: #fff;
+  border-radius: 5px;
+  width: 200px;
+  height: 40px;
+
+}
+
+
+#search {
+
+  border: none;
+  outline: none;
+  background-color: #223253d8;
+  border-radius: 5px;
+  width: 350px;
+  height: 40px;
+  color: #fff;
+  font-family: inherit;
+  letter-spacing: 1px;
+
+}
+
+.filterHeader .formulario input::placeholder {
+
+  color: #fff;
+  padding-left: 8px;
+
+}
+
+
+#main {
+
+  padding: 18px;
+  border: #223253e8; ;
+  border-end-end-radius: 20px;
+}
+
+.card-body li{
+
+  padding: 5px;
+}
+
+.card-body {
+
+  list-style-type: none;
+  border-end-end-radius: 20px;
+  background-color: #223253d8;
+}
+
+.card-body span{
+
+  font-weight: 300;
+}
+
+.card-body h1{
+
+  font-size: 25px;
+}
+
+.grid{
+
+  display: grid;
+  grid-template-columns: lfr;
+  border-radius: 8px;
+  gap: 60px;
+  
+}
+
+
+@media (min-width: 650px) {
+  
+
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 768px) {
+
+
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 992px) {
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
